--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -58,3 +58,5 @@ jobs:
       run: |
         make -j$(nproc)
         sudo make install DESTDIR=AppDir
+    - name: cpack
+      run: sudo cpack    
