--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -57,6 +57,6 @@ jobs:
       # Execute the build.  You can specify a specific target with "--target <NAME>"
       run: |
         make -j$(nproc)
-        run: sudo cpack -G DEB 
+        sudo cpack -G DEB 
         sudo make install DESTDIR=AppDir
         
