--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -59,4 +59,12 @@ jobs:
         make -j$(nproc)
         sudo cpack -G DEB 
         sudo make install DESTDIR=AppDir
-        
+    - name: copy file via ssh password
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.VSCP1 }}
+        username: ${{ secrets.VSCP1_USER }}
+        password: ${{ secrets.VSCP1_PW }}
+        port: ${{ secrets.VSCP1_PORT }}
+        source: "/home/runner/work/vscp/vscp/build/*.deb"
+        target: "/home/akhe/"    
