Fixed script naming fault

--- a/src/vscp/vscp-mkpasswd/CMakeLists.txt
+++ b/src/vscp/vscp-mkpasswd/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.5)
 
 # set the project name
-project(test LANGUAGES CXX C)
+project(vscp-mkpasswd LANGUAGES CXX C)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
