--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,4 +62,5 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: ${{ matrix.os }}_vscpd_15.0.0.deb
-        path: /home/runner/work/vscp/vscp/build/vscpd_15.0.0.deb   
+        path: /home/runner/work/vscp/vscp/build/vscpd_15.0.0.deb
+        retention-days: 30
