--- a/resources/linux/vscpd.service
+++ b/resources/linux/vscpd.service
@@ -10,9 +10,10 @@ NotifyAccess=main
 ExecStart=/usr/sbin/vscpd -s -c /etc/vscp/vscpd.json
 ExecReload=/bin/kill -HUP $MAINPID
 Restart=on-failure
-ExecStartPre=/bin/mkdir -m 740 -p /var/log/vscp
+ExecStartPre=/bin/mkdir -m 764 -p /var/log/vscp
 ExecStartPre=/bin/chown vscp /var/log/vscp
-ExecStartPre=/bin/mkdir -m 740 -p /run/vscp
+ExecStartPre=/bin/chown vscp /var/log/vscp
+ExecStartPre=/bin/mkdir -m 764 -p /run/vscp
 ExecStartPre=/bin/chown vscp /run/vscp
 User=vscp
 Group=vscp
