--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,7 @@ jobs:
       # Execute the build.  You can specify a specific target with "--target <NAME>"
       run: |
         make -j$(nproc)
-        ls
+        ls man
         sudo cpack -G DEB 
         sudo make install DESTDIR=AppDir
     - uses: actions/upload-artifact@v2
