--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,6 +57,9 @@ jobs:
       # Execute the build.  You can specify a specific target with "--target <NAME>"
       run: |
         make -j$(nproc)
+        echo "--->ls "
+        ls
+        echo "--->ls man"
         ls man
         sudo cpack -G DEB 
         sudo make install DESTDIR=AppDir
