--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -10,9 +10,9 @@ on:
     branches: [master, development]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [master, development]
+    branches: [development]
   schedule:
-    - cron: '0 19 * * 4'
+    - cron: '0 5 * * 5'
 
 jobs:
   analyze:
