Ported test to windows

--- a/tests/remotetcpif/CMakeLists.txt
+++ b/tests/remotetcpif/CMakeLists.txt
@@ -9,14 +9,28 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+# include(FetchContent)
+# FetchContent_Declare(
+#   googletest
+#   URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
+# )
+# # For Windows: Prevent overriding the parent project's compiler/linker settings
+# set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+# FetchContent_MakeAvailable(googletest)
+
 # set the module path
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules)
 
 message(STATUS "Build dir: " ${PROJECT_SOURCE_DIR})
 
 find_package(GTest CONFIG REQUIRED)
-
 find_package(OpenSSL REQUIRED)
+
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+# pthreads
+set (THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
 
 # TODO Check SLL version and set variable accordingly
 set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -DOPENSSL_API_1_1")
@@ -37,8 +51,6 @@ add_executable(test_vscpremotetcpif
     ${PROJECT_SOURCE_DIR}/../../src/vscp/common/vscpdatetime.cpp
     ${PROJECT_SOURCE_DIR}/../../src/vscp/common/vscpdatetime.h
     ${PROJECT_SOURCE_DIR}/../../src/vscp/common/vscphelper.cpp
-    ${PROJECT_SOURCE_DIR}/../../src/vscp/common/vscpcanaldeviceif.h
-    ${PROJECT_SOURCE_DIR}/../../src/vscp/common/vscpcanaldeviceif.cpp
     ${PROJECT_SOURCE_DIR}/../../src/vscp/common/vscp.h
     ${PROJECT_SOURCE_DIR}/../../src/common/sockettcp.h
     ${PROJECT_SOURCE_DIR}/../../src/common/sockettcp.c
@@ -57,24 +69,50 @@ add_executable(test_vscpremotetcpif
     ${PROJECT_SOURCE_DIR}/../../src/common/third_party/nlohmann/json.hpp
     )
 
-target_include_directories(test_vscpremotetcpif PUBLIC 
+
+if (WIN32)    
+  find_package(pthreads REQUIRED)
+  find_path(PTHREAD_INCLUDE_DIR pthread.h)
+
+  target_include_directories(test_vscpremotetcpif PUBLIC 
     ${PROJECT_SOURCE_DIR}/../../src/vscp/common/
     ${PROJECT_SOURCE_DIR}/../../src/common/
     ${PROJECT_SOURCE_DIR}/../../src/common/third_party
     ${PROJECT_SOURCE_DIR}/../../src/common/third_party/nlohmann
-    ${PROJECT_SOURCE_DIR}/../../src/common/third_party/spdlog-1.8.5/include/
+    ${PROJECT_SOURCE_DIR}/../../src/common/third_party/spdlog-1.9.2/include/
     ${OPENSSL_INCLUDE_DIR}
     ${EXPAT_INCLUDE_DIRS}
-    ${MOSQUITTO_INCLUDE_DIR}
-    )
+  )
+else()
+  target_include_directories(test_vscpremotetcpif PUBLIC 
+    ${PROJECT_SOURCE_DIR}/../../src/vscp/common/
+    ${PROJECT_SOURCE_DIR}/../../src/common/
+    ${PROJECT_SOURCE_DIR}/../../src/common/third_party
+    ${PROJECT_SOURCE_DIR}/../../src/common/third_party/nlohmann
+    ${PROJECT_SOURCE_DIR}/../../src/common/third_party/spdlog-1.9.2/include/
+    ${OPENSSL_INCLUDE_DIR}
+    ${EXPAT_INCLUDE_DIRS}
+  )
+endif()  
+    
+if (WIN32)
+  target_link_libraries(test_vscpremotetcpif PRIVATE
+    PThreads4W::PThreads4W_CXXEXC
+    OpenSSL::SSL OpenSSL::Crypto
+    ${OPENSSL_LIBRARIES}
+    ${EXPAT_LIBRARIES}
+    GTest::gtest
+    GTest::gmock
+  )
+else()
+  target_link_libraries(test_vscpremotetcpif PRIVATE
+    pthread
+    OpenSSL::SSL OpenSSL::Crypto
+    ${OPENSSL_LIBRARIES}
+    ${EXPAT_LIBRARIES}
+    GTest::gtest
+    GTest::gmock
+  )    
+endif()
 
-target_link_libraries(test_vscpremotetcpif PRIVATE m
-  dl
-  pthread
-  OpenSSL::SSL OpenSSL::Crypto
-  ${OPENSSL_LIBRARIES}
-  ${EXPAT_LIBRARIES}
-  GTest::gtest
-  GTest::gmock
-)    
 
