Address parsing of mdf (json/xml) in place

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,30 +76,44 @@
         "codecvt": "cpp"
     },
     "cSpell.words": [
-        "Grodans Paradis",
-        "MQTT",
-        "VSCP",
-        "b",
-        "base",
-        "bretain",
-        "callback",
-        "config",
-        "daemon",
-        "debug",
-        "interfaces",
-        "m",
-        "mosq",
-        "mosquitto",
-        "mqtt",
-        "on",
-        "retain",
-        "set",
-        "spdlog",
-        "subscribe",
-        "to",
-        "topic",
-        "unsubscribe",
-        "Åke Hedman"
+      "Åke Hedman",
+      "Atmel",
+      "b",
+      "base",
+      "bretain",
+      "callback",
+      "Clearup",
+      "CMDF",
+      "config",
+      "daemon",
+      "debug",
+      "Decison",
+      "Descvription",
+      "dmatrix",
+      "fgcolor",
+      "frmmain",
+      "gdepth",
+      "Grodans Paradis",
+      "interfaces",
+      "kainjow",
+      "m",
+      "mosq",
+      "mosquitto",
+      "mqtt",
+      "MQTT",
+      "nlohmann",
+      "nregisters",
+      "on",
+      "pmdf",
+      "retain",
+      "runasuser",
+      "set",
+      "spdlog",
+      "subscribe",
+      "to",
+      "topic",
+      "unsubscribe",
+      "VSCP"
     ],
     "editor.dragAndDrop": false,
     "editor.codeLens": true,
