--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,11 +17,14 @@ jobs:
     # https://github.com/actions/checkout  
     - uses: actions/checkout@v2
      
+    - name: Update before installing packages
+      run: sudo apt-get update
+
     - name: Checkout google test repo
       run: sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo mkdir build && cd build && sudo cmake .. && sudo make DESTDIR=/usr/lib
 
-    - name: Update before installing packages
-      run: sudo apt-get update
+    - name: Install libcurl and cpp wrapper for it
+      run: sudo apt-get install libcurl4-openssl-dev libcurlpp-dev
 
     - name: Install libexpat-dev manually
       run: sudo apt-get install libexpat-dev
