Added libcurl install to CodeQL build so it builds clean

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -47,6 +47,9 @@ jobs:
     - name: Update before installing packages
       run: sudo apt-get update
 
+    - name: Install libcurl and cpp wrapper for it
+      run: sudo apt-get install libcurl4-openssl-dev libcurlpp-dev  
+
     - name: Install libexpat-dev manually
       run: sudo apt-get install libexpat-dev
       
