test: Added tests and poarsing for remote variables on XML format

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,9 +77,12 @@
     },
     "cSpell.words": [
       "Åke Hedman",
+      "angliškas",
+      "aprašymas",
       "Atmel",
       "b",
       "base",
+      "Beschreibung",
       "bretain",
       "callback",
       "Clearup",
@@ -88,15 +91,24 @@
       "daemon",
       "debug",
       "Decison",
+      "descrição",
+      "descripción",
       "Descvription",
       "dmatrix",
+      "eine",
+      "Esta",
+      "estas",
       "fgcolor",
       "frmmain",
       "gdepth",
       "Grodans Paradis",
+      "inglês",
       "interfaces",
       "kainjow",
+      "Lietuvos",
       "m",
+      "mdfparser",
+      "mesp",
       "mosq",
       "mosquitto",
       "mqtt",
@@ -104,14 +116,22 @@
       "nlohmann",
       "nregisters",
       "on",
+      "pactionparam",
+      "pbit",
+      "pbits",
       "pmdf",
+      "priskribo",
+      "prvar",
+      "pvalues",
       "retain",
       "runasuser",
       "set",
       "spdlog",
       "subscribe",
+      "tmdpparser",
       "to",
       "topic",
+      "Unexisting",
       "unsubscribe",
       "VSCP"
     ],
