--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "taskName": "build vscpd",
             "type": "shell",
-            "command": "cd build; make",
+            "command": "cd build; make -j4",
             "args": [],
             "group": {
                 "kind": "build",
@@ -15,7 +15,7 @@
         {
             "taskName": "clean & build vscpd",
             "type": "shell",
-            "command": "mkdir build; cd build; rm CMakeCache.txt; cmake --clean-first .. -DCMAKE_BUILD_TYPE=Debug; make clean; make",
+            "command": "mkdir build; cd build; rm CMakeCache.txt; cmake --clean-first .. -DCMAKE_BUILD_TYPE=Debug; make clean; make -j4",
             "args": [],
             "group": {
                 "kind": "build",
@@ -70,7 +70,7 @@
         {
             "taskName": "clean & build unittest vscphelper",
             "type": "shell",
-            "command": "cd tests/helperlib; make clean; make",
+            "command": "cd tests/helperlib; make clean; make  -j4",
             "args": [],
             "group": {
                 "kind": "build",
@@ -103,7 +103,7 @@
         {
             "taskName": "clean & build unittest userlist",
             "type": "shell",
-            "command": "cd tests/userlist; mkdir build; cd build; cmake ..; make clean; make",
+            "command": "cd tests/userlist; mkdir build; cd build; cmake ..; make clean; make -j4",
             "args": [],
             "group": {
                 "kind": "build",
@@ -125,7 +125,7 @@
         {
           "taskName": "clean & build test remotetcpif",
           "type": "shell",
-          "command": "cd tests/remotetcpif; rm -rf build; mkdir build; cd build; cmake .. -DCMAKE_BUILD_TYPE=Debug; make clean; make",
+          "command": "cd tests/remotetcpif; rm -rf build; mkdir build; cd build; cmake .. -DCMAKE_BUILD_TYPE=Debug; make clean; make  -j4",
           "args": [],
           "group": {
               "kind": "build",
@@ -147,7 +147,7 @@
         {
             "taskName": "clean & build unittest clientlist",
             "type": "shell",
-            "command": "cd tests/clientlist; mkdir build; cd build; cmake ..; make clean; make",
+            "command": "cd tests/clientlist; mkdir build; cd build; cmake ..; make clean; make  -j4",
             "args": [],
             "group": {
                 "kind": "build",
@@ -169,7 +169,7 @@
         {
             "taskName": "clean & build test code for vscp-client-mqtt",
             "type": "shell",
-            "command": "cd tests/vscp-client-mqtt; mkdir build; cd build; cmake .. -DCMAKE_BUILD_TYPE=Debug; make clean; make",
+            "command": "cd tests/vscp-client-mqtt; mkdir build; cd build; cmake .. -DCMAKE_BUILD_TYPE=Debug; make clean; make -j4",
             "args": [],
             "group": {
                 "kind": "build",
@@ -191,7 +191,7 @@
       {
           "taskName": "clean & build test code for mdfparser",
           "type": "shell",
-          "command": "cd tests/mdfparser; mkdir build; cd build; cmake .. -DCMAKE_BUILD_TYPE=Debug; make clean; make",
+          "command": "cd tests/mdfparser; mkdir build; cd build; cmake .. -DCMAKE_BUILD_TYPE=Debug; make clean; make -j4",
           "args": [],
           "group": {
               "kind": "build",
