--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -187,8 +187,8 @@
               "isDefault": false
           },
           "problemMatcher": "$gcc"
-      },
-      {
+        },
+        {
           "taskName": "clean & build test code for mdfparser",
           "type": "shell",
           "command": "cd tests/mdfparser; mkdir build; cd build; cmake .. -DCMAKE_BUILD_TYPE=Debug; make clean; make -j4",
@@ -198,6 +198,28 @@
               "isDefault": false
           },
           "problemMatcher": "$gcc"
-      }
+        },
+        {
+          "taskName": "build test code for register-test",
+          "type": "shell",
+          "command": "cd tests/register/build; make -j4",
+          "args": [],
+          "group": {
+              "kind": "build",
+              "isDefault": false
+          },
+          "problemMatcher": "$gcc"
+        },
+        {
+          "taskName": "clean & build test code for register-test",
+          "type": "shell",
+          "command": "cd tests/register; mkdir build; cd build; cmake .. -DCMAKE_BUILD_TYPE=Debug; make clean; make -j4",
+          "args": [],
+          "group": {
+              "kind": "build",
+              "isDefault": false
+          },
+          "problemMatcher": "$gcc"
+        }
     ]
 }
