--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "third_party/civetweb"]
 	path = third_party/civetweb
 	url = https://github.com/civetweb/civetweb.git
+[submodule "third_party/sqlite3"]
+	path = third_party/sqlite3
+	url = https://github.com/sqlite/sqlite.git
