--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "third_party/fastpbkdf2"]
 	path = third_party/fastpbkdf2
 	url = https://github.com/ctz/fastpbkdf2.git
+[submodule "third_party/mongoose"]
+	path = third_party/mongoose
+	url = https://github.com/cesanta/mongoose.git
