Fixed openssl build flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -217,13 +217,34 @@ endif(WIN32)
 add_definitions(-DUSE_WEBSOCKET)
 add_definitions(-DUSE_IPV6)
 set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -DUSE_IPV6 -DUSE_WEBSOCKET ")
-string(FIND "${OPENSSL_VERSION}" "1.1." SSL_VER_POS)
-if (${SSL_VER_POS})
-    #set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -DOPENSSL_API_1_0")
-    add_definitions(-DOPENSSL_API_1_0)
-else()
-    #set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -DOPENSSL_API_1_1")
-    add_definitions(-DOPENSSL_API_1_1)
+
+set(OPENSSL_VER "OPENSSL_API_${OPENSSL_VERSION_MAJOR}_${OPENSSL_VERSION_MINOR}")
+message(STATUS "OPENSSL Version: ${OPENSSL_VER}")
+add_definitions(-D${OPENSSL_VER}) 
+
+# 1.1.0 / 1.1.1 / 3.0.0 / 3.1.0
+string(FIND "${OPENSSL_VERSION}" "1.0" SSL_VER_POS)
+if(${SSL_VER_POS})
+  #set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -DOPENSSL_API_1_0")
+  #add_definitions(-DOPENSSL_API_1_0)
+endif()    
+
+string(FIND "${OPENSSL_VERSION}" "1.1" SSL_VER_POS)
+if(${SSL_VER_POS})
+  #set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -DOPENSSL_API_1_1")
+  #add_definitions(-DOPENSSL_API_1_1)
+endif()
+
+string(FIND "${OPENSSL_VERSION}" "3.0" SSL_VER_POS)
+if(NOT SSL_VER_POS EQUAL -1)
+  #add_definitions(-DOPENSSL_API_3_0)
+  message(STATUS "openssl test ${SSL_VER_POS}")
+endif()  
+
+string(FIND "${OPENSSL_VERSION}" "3.1" SSL_VER_POS)
+if(NOT SSL_VER_POS EQUAL -1)
+  add_definitions(-DOPENSSL_API_3_0)
+  message(STATUS "Open ssl version is 3.1 but set to 3.0 ${SSL_VER_POS} fir Civetweb. That is OK")
 endif()
 
 if (WIN32)
